# Event-Manager

./: .gitignore  README.md  package-lock.json
backend/: Makefile  alembic.ini  database.py  main.py  model.py  pyproject.toml
backend/alembic/versions/: 18b45ff794b1_create_events_table.py  43228f04e84a_add_fake_data_to_event_table.py
event-manager/: package-lock.json  package.json
event-manager/src/: index.css  index.js
event-manager/src/app/: App.css  App.js
event-manager/src/app/EventCard/: index.js
event-manager/src/app/EventFormModal/: index.css  index.js
event-manager/src/app/EventsPage/: index.css  index.js
